--- a/production/nginx/default.conf
+++ b/production/nginx/default.conf
@@ -1,13 +1,15 @@
 server {
   listen       80;
   server_name  localhost;
-
+  root   /usr/share/nginx/html;
+  index  index.html index.htm;
+  
   #charset koi8-r;
   #access_log  /var/log/nginx/host.access.log  main;
+  #error_log  /var/log/nginx/host.error.log
 
   location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    try_files $uri /index.html =404;
   }
 
   #error_page  404              /404.html;
